feat: handle endpoint to update user profile and/or user credential and its swagger documentation
