# models/users.go
@@ -1,6 +1,15 @@
 package models
 
-import "time"
+import (
+	"be-tickitz/dto"
+	"be-tickitz/utils"
+	"context"
+	"errors"
+	"strings"
+	"time"
+
+	"github.com/matthewhartstonge/argon2"
+)
 
 type User struct {
 	Id          int       `db:"id" json:"id"`
@@ -20,4 +29,145 @@ type UserCredentials struct {
 	Role      string    `form:"role" json:"role" db:"role" binding:"required"`
 	CreatedAt time.Time `form:"createdAt" json:"createdAt" db:"created_at" binding:"required"`
 	UpdatedAt time.Time `form:"updatedAt" json:"updatedAt" db:"updated_at" binding:"required"`
+}
+
+func UpdateUserProfile(userId int, request dto.UpdateUserRequest) (dto.UpdateUserResult, error) {
+	conn, err := utils.DBConnect()
+	if err != nil {
+		return dto.UpdateUserResult{}, err
+	}
+	defer conn.Close()
+
+	tx, err := conn.Begin(context.Background())
+	if err != nil {
+		return dto.UpdateUserResult{}, err
+	}
+	defer func() {
+		if err != nil {
+			tx.Rollback(context.Background())
+		} else {
+			tx.Commit(context.Background())
+		}
+	}()
+
+	if request.Password != nil && *request.Password != *request.ConfirmPassword {
+		return dto.UpdateUserResult{}, errors.New("password and confirm password do not match")
+	}
+
+	if request.Email != nil && request.Password != nil {
+		argon := argon2.DefaultConfig()
+		hashedPassword, err := argon.HashEncoded([]byte(*request.Password))
+		if err != nil {
+			return dto.UpdateUserResult{}, err
+		}
+		_, err = tx.Exec(context.Background(),
+			`UPDATE users SET email = $1, password = $2 WHERE id = $3`,
+			*request.Email, string(hashedPassword), userId)
+		if err != nil {
+			if strings.Contains(err.Error(), "duplicate key") {
+				return dto.UpdateUserResult{}, errors.New("email already used by another user")
+			}
+			return dto.UpdateUserResult{}, err
+		}
+	} else if request.Email != nil {
+		_, err = tx.Exec(context.Background(),
+			`UPDATE users SET email = $1 WHERE id = $2`,
+			*request.Email, userId)
+		if err != nil {
+			if strings.Contains(err.Error(), "duplicate key") {
+				return dto.UpdateUserResult{}, errors.New("email already used by another user")
+			}
+			return dto.UpdateUserResult{}, err
+		}
+	} else if request.Password != nil {
+		argon := argon2.DefaultConfig()
+		hashedPassword, err := argon.HashEncoded([]byte(*request.Password))
+		if err != nil {
+			return dto.UpdateUserResult{}, err
+		}
+		_, err = tx.Exec(context.Background(),
+			`UPDATE users SET password = $1 WHERE id = $2`,
+			string(hashedPassword), userId)
+		if err != nil {
+			return dto.UpdateUserResult{}, err
+		}
+	}
+
+	if request.Name != nil && request.PhoneNumber != nil && request.ProfilePicture != nil {
+		_, err = tx.Exec(context.Background(),
+			`UPDATE profiles SET name = $1, phone_number = $2, profile_picture = $3 WHERE id_user = $4`,
+			*request.Name, *request.PhoneNumber, *request.ProfilePicture, userId)
+		if err != nil {
+			if strings.Contains(err.Error(), "duplicate key") {
+				return dto.UpdateUserResult{}, errors.New("phone number already used by another user")
+			}
+			return dto.UpdateUserResult{}, err
+		}
+	} else if request.Name != nil && request.PhoneNumber != nil {
+		_, err = tx.Exec(context.Background(),
+			`UPDATE profiles SET name = $1, phone_number = $2 WHERE id_user = $3`,
+			*request.Name, *request.PhoneNumber, userId)
+		if err != nil {
+			if strings.Contains(err.Error(), "duplicate key") {
+				return dto.UpdateUserResult{}, errors.New("phone number already used by another user")
+			}
+			return dto.UpdateUserResult{}, err
+		}
+	} else if request.Name != nil && request.ProfilePicture != nil {
+		_, err = tx.Exec(context.Background(),
+			`UPDATE profiles SET name = $1, profile_picture = $2 WHERE id_user = $3`,
+			*request.Name, *request.ProfilePicture, userId)
+		if err != nil {
+			return dto.UpdateUserResult{}, err
+		}
+	} else if request.PhoneNumber != nil && request.ProfilePicture != nil {
+		_, err = tx.Exec(context.Background(),
+			`UPDATE profiles SET phone_number = $1, profile_picture = $2 WHERE id_user = $3`,
+			*request.PhoneNumber, *request.ProfilePicture, userId)
+		if err != nil {
+			if strings.Contains(err.Error(), "duplicate key") {
+				return dto.UpdateUserResult{}, errors.New("phone number already used by another user")
+			}
+			return dto.UpdateUserResult{}, err
+		}
+	} else if request.Name != nil {
+		_, err = tx.Exec(context.Background(),
+			`UPDATE profiles SET name = $1 WHERE id_user = $2`,
+			*request.Name, userId)
+		if err != nil {
+			return dto.UpdateUserResult{}, err
+		}
+	} else if request.PhoneNumber != nil {
+		_, err = tx.Exec(context.Background(),
+			`UPDATE profiles SET phone_number = $1 WHERE id_user = $2`,
+			*request.PhoneNumber, userId)
+		if err != nil {
+			if strings.Contains(err.Error(), "duplicate key") {
+				return dto.UpdateUserResult{}, errors.New("phone number already used by another user")
+			}
+			return dto.UpdateUserResult{}, err
+		}
+	} else if request.ProfilePicture != nil {
+		_, err = tx.Exec(context.Background(),
+			`UPDATE profiles SET profile_picture = $1 WHERE id_user = $2`,
+			*request.ProfilePicture, userId)
+		if err != nil {
+			return dto.UpdateUserResult{}, err
+		}
+	}
+
+	var userData dto.UpdateUserResult
+
+	err = tx.QueryRow(context.Background(),
+		`SELECT u.email, p.name, p.phone_number, p.profile_picture
+         FROM users u
+         JOIN profiles p ON u.id = p.id_user
+         WHERE u.id = $1`, userId).
+		Scan(&userData.Email, &userData.Name, &userData.PhoneNumber, &userData.ProfilePicture)
+
+	if err != nil {
+		return dto.UpdateUserResult{}, err
+	}
+
+	return userData, nil
 }
