# routers/user.go
@@ -1,0 +1,13 @@
+package routers
+
+import (
+	"be-tickitz/controllers"
+	"be-tickitz/middlewares"
+
+	"github.com/gin-gonic/gin"
+)
+
+func userRouter(r *gin.RouterGroup) {
+	r.Use(middlewares.VerifyToken())
+	r.PATCH("", controllers.UpdateUser)
+}
